# rl-basics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  list_env.txt  main.ipynb  main.py  pyproject.toml  render.py  requirements-dev.txt  requirements.txt  run.ipynb
a2c/: a2c.py  neuralnet.py  run_a2c.ipynb
offline/: make_dataset.py
offline/bc/: pytorch_behavior_cloning.py
online/a2c/: flax_a2c_atari.py  flax_a2c_continuous.py  flax_a2c_discrete.py  pytorch_a2c_atari.py  pytorch_a2c_continuous.py  pytorch_a2c_discrete.py
online/c51/: pytorch_c51_discrete.py
online/ddpg/: flax_ddpg_continuous.py  pytorch_ddpg_continuous.py
online/dqn/: README.md  flax_dqn_atari.py  flax_dqn_discrete.py  pytorch_dqn_atari.py  pytorch_dqn_discrete.py
online/ppo/: flax_ppo_atari.py  flax_ppo_continuous.py  flax_ppo_discrete.py  pytorch_ppo_atari.py  pytorch_ppo_continuous.py  pytorch_ppo_discrete.py
online/rpo/: pytorch_rpo_continuous.py
online/sac/: README.md  flax_sac_continuous.py  pytorch_sac_continuous.py
online/td3/: flax_td3_continuous.py  pytorch_td3_continuous.py
ppo/: neuralnet.py  ppo.py  run_ppo.ipynb
reinforce/: neuralnet.py  reinforce.py  run_reinforce.ipynb
rl_gym/: a2c.py  a2c_continuous.py  agent.py  ddpg.py  dqn.py  dqn_atari.py  neuralnet.py  policy.py  ppo.py  ppo_atari.py  ppo_continuous.py
rl_gym/A2C/: a2c.py  a2c_continuous.py
rl_gym/PPO/: ppo.py  ppo_atari.py  ppo_continuous.py
rl_gym/algorithm/: a2c.py  base.py  ddpg.py  ppo.py  reinforce.py
rlgym/: agent.py  neuralnet.py  policy.py
rlgym/algorithm/: a2c.py  base.py  ddpg.py  ppo.py  reinforce.py
rlgym/utils/: normalization.py
src/a2c/: README.md  a2c.py  a2c_atari.py  a2c_continuous.py  a2c_flax.py  flax_a2c_atari.py  flax_a2c_continuous.py  flax_a2c_discrete.py  pytorch_a2c_atari.py  pytorch_a2c_continuous.py  pytorch_a2c_discrete.py
src/c51/: pytorch_c51_discrete.py
src/ddpg/: README.md  ddpg.py  flax_ddpg_continuous.py  pytorch_ddpg_continous.py  pytorch_ddpg_continuous.py
src/dqn/: README.md  dqn.py  dqn_atari.py  flax_dqn_atari.py  flax_dqn_discrete.py  pytorch_dqn_atari.py  pytorch_dqn_discrete.py
src/ppo/: README.md  flax_ppo_atari.py  flax_ppo_continuous.py  flax_ppo_discrete.py  ppo.py  ppo_atari.py  ppo_continuous.py  pytorch_ppo_atari.py  pytorch_ppo_continuous.py  pytorch_ppo_discrete.py
(+39 files in other folders)
