[tool.poetry]
name = "rl-gym-zoo"
version = "0.1.0"
description = ""
authors = ["Valentin Canete <valentin.canete@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "rl_gym_zoo"}]

[tool.poetry.dependencies]
python = "^3.10"
box2d-py = "2.3.5"
numpy = "^1.24.0"
torch = "1.13.1"
tensorboard = "^2.11.0"
gymnasium = {extras = ["all"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.poetry.group.atari.dependencies]
autorom = {extras = ["accept-rom-license"], version = "^0.5.0"}

[tool.poetry.group.profile]
optional = true

[tool.poetry.group.profile.dependencies]
snakeviz = "^2.1.1"

[tool.black]
line-length = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
